# routa-js

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  Cargo.toml  Dockerfile  GITHUB_PAGES.md  README.md  api-contract.yaml  convert-docs.js  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  issue-comment.md  network-after-ask.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  tailwind.config.ts  test-pr-review.md  tsconfig.desktop.json  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.local.json
apps/desktop/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: standalone_server.rs
apps/desktop/src-tauri/frontend/: 404.html  ci-placeholder.txt  index.html  index.txt  mcp-test.html  mcp-test.txt  mcp-tools.html  mcp-tools.txt
apps/desktop/src-tauri/src/: lib.rs  main.rs  pty.rs  pty_mobile.rs
apps/desktop/src-tauri/src/server/: error.rs  mod.rs  shell_env.rs  state.rs
apps/desktop/src-tauri/src/server/acp/: mod.rs  process.rs
apps/desktop/src-tauri/src/server/api/: acp_routes.rs  agents.rs  mod.rs  notes.rs  sessions.rs  skills.rs  tasks.rs  test_mcp.rs  workspaces.rs
apps/desktop/src-tauri/src/server/db/: mod.rs
apps/desktop/src-tauri/src/server/events/: mod.rs
apps/desktop/src-tauri/src/server/mcp/: mod.rs
apps/desktop/src-tauri/src/server/models/: agent.rs  message.rs  mod.rs  note.rs  task.rs  workspace.rs
apps/desktop/src-tauri/src/server/skills/: mod.rs
apps/desktop/src-tauri/src/server/store/: agent_store.rs  conversation_store.rs  mod.rs  note_store.rs  task_store.rs  workspace_store.rs
apps/desktop/src-tauri/tests/: api_test.rs
architecture/: quantums.yaml
crates/routa-cli/: Cargo.toml  README.md
crates/routa-cli/src/: lib.rs  main.rs
crates/routa-cli/src/commands/: acp.rs  acp_serve.rs  agent.rs  chat.rs  delegate.rs  mod.rs  prompt.rs  review.rs  rpc.rs  security.rs  server.rs  skill.rs  task.rs  workflow.rs  workspace.rs
crates/routa-cli/src/commands/review/: acp_runner.rs  legacy.rs  output.rs
crates/routa-cli/tests/: cli_integration.rs
crates/routa-rpc/: Cargo.toml
crates/routa-rpc/src/: lib.rs
crates/routa-security-scan/: Cargo.toml
crates/routa-security-scan/src/: lib.rs  main.rs
crates/routa-server/: Cargo.toml
crates/routa-server/examples/: test_rpc.rs
crates/routa-server/src/: lib.rs
crates/routa-server/src/api/: a2a.rs  a2ui.rs  acp_registry.rs  acp_routes.rs  ag_ui.rs  background_tasks.rs  clone.rs  clone_progress.rs  codebases.rs  debug.rs  github.rs  kanban.rs  mcp_routes.rs  mcp_servers.rs  mcp_tools.rs  memory.rs  mod.rs  polling.rs  provider_models.rs  providers.rs  rpc.rs  sandbox.rs  schedules.rs  sessions.rs  skills_catalog.rs  specialists.rs  tasks.rs  traces.rs  webhooks.rs  workspaces.rs
crates/routa-server/src/application/: tasks.rs
crates/routa-server/src/rpc/: error.rs  mod.rs  router.rs  types.rs
crates/routa-server/src/rpc/methods/: agents.rs  mod.rs  notes.rs  skills.rs  tasks.rs  workspaces.rs
crates/routa-server/tests/: rust_api_end_to_end.rs
docker/: Dockerfile.fitness  Dockerfile.opencode-agent
docs/: A2A_INTEGRATION.md  agent-team-design-practice.md  claude-code-vscode-integration.md  implementation-summary.md  index.html  quickstart.md
drizzle/: 0000_hesitant_blindfold.sql  0001_workspace_centric.sql  0002_codebase_source_fields.sql  0003_soft_bushwacker.sql  0004_puzzling_blacklash.sql  0005_add_traces_table.sql  0006_add_custom_mcp_servers.sql  0007_add_background_tasks.sql  0008_github_webhook_triggers.sql  0009_add_schedules.sql  0010_add_background_tasks_columns.sql
drizzle-sqlite/: 0000_natural_miracleman.sql  0001_workspace_centric.sql  0002_codebase_source_fields.sql  0003_strange_prodigy.sql  0004_new_madame_hydra.sql  0005_add_custom_mcp_servers.sql  0006_add_background_tasks.sql  0007_github_webhook_triggers.sql  0008_add_schedules.sql
e2e/: a2a-protocol.spec.ts  acp-chat.spec.ts  acp-process-output.spec.ts  acp-provider-switching.spec.ts  acp-runtime.spec.ts  acp-warmup.spec.ts  agent-trace.spec.ts  background-tasks.spec.ts  custom-mcp-servers.spec.ts  final-verification.spec.ts  github-webhook-triggers.spec.ts  homepage-open-board-tauri.spec.ts  install-agents-check.spec.ts  install-agents-modal.spec.ts  kanban-agent-panel.spec.ts  kanban-background-agents.spec.ts  kanban-column-automation.spec.ts  kanban-opencode-smoke.spec.ts  kanban-workspace-repository.spec.ts  layout-changes.spec.ts  layout-verification.spec.ts  mcp-integration.spec.ts  mcp-tools.spec.ts  provider-changes.spec.ts  repo-picker.spec.ts  routa-ui-check.spec.ts  session-layout-ux.spec.ts  specialist-selection.spec.ts  task-panel-check.spec.ts  task-panel-inject.spec.ts  task-panel-markdown-styles.spec.ts  task-panel-mock-visual.spec.ts  tauri-backend-check.spec.ts  ui-verification.spec.ts  verify-layout.spec.ts  workflow-visualization.spec.ts
issues/: 2026-03-02-drizzle-migrate-neon-connection-failure.md  2026-03-02-hmr-resets-session-to-task-map.md  _template.md  background-task-testing-summary.md  pr-verification-system-design.md  spec-issue-54.md
resources/: page-snapshot-registry.json
scripts/: build-desktop-bundle.mjs  build-docker.mjs  build-docs-site.mjs  build-static.mjs  check-api-parity.ts  check-markdown-links.sh  check-schedules-db.ts  ci-red-fixer.ts  feature-tree-generator.py  generate-snapshots.mjs  issue-enricher.ts  issue-triage.ts  migrate-schedules.ts  page-snapshot-lib.mjs  prepare-frontend.mjs  run-check.sh  smart-check.sh  start-acp-runner.ts  test-db.ts  validate-api-parity.sh  validate-openapi-schema.ts  validate-snapshots.mjs  validate-storybook-governance.mjs  verify-migration.ts
src/: instrumentation.ts
tools/routa-fitness/: README.md  pyproject.toml
tools/routa-fitness/routa_fitness/: __init__.py  cli.py
tools/routa-fitness/routa_fitness/loaders/: __init__.py  evidence_loader.py
tools/routa-fitness/tests/: test_cli.py
(+578 files in other folders)
