[package]
name = "routa-desktop"
version = "0.1.0"
description = "Routa.js Desktop - Multi-agent coordination platform"
authors = ["phodal"]
edition = "2021"

[lib]
name = "routa_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# ── Rust Backend (replacing Node.js) ──────────────────────────────
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "0.15", features = ["server", "transport-streamable-http-server", "schemars"] }
schemars = "1"
agent-client-protocol = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
glob = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
